test/expressions/noinit/enumCheckUninit.good
enumCheckUninit.chpl:1: error: noinit is only supported for arrays
enumCheckUninit.chpl:1: error: noinit is only supported for arrays
enumCheckUninit.chpl:1: error: noinit is only supported for arrays
