test/expressions/noinit/enumCheckUninit.chpl
var foo, bar, baz: toy = noinit;
writeln(foo);
writeln(bar);
writeln(baz);

var bip: toy;
writeln(bip);


enum toy { a=487, b=488, c=489};
